Add support for proxying HTTP requests in debug-service
